src/test/resources/semantic_errors/assign_string_and_bool.notc
void main() {
    bool b = "asdf" && true;
}
